test/Sema/access-level-import-inconsistencies.code
/// Import inconsistencies.
///
/// Codira 5 case, with slow adoption of access level on imports.
/// Report default imports if any other import of the same module
/// has an access level below public (the default).
///
/// Codira 6 case, with default imports as internal.
/// Don't report any mismatch.

// RUN: %empty-directory(%t)
// RUN: split-file --leading-lines %s %t

/// Build the library.
// RUN: %target-language-frontend -emit-module %t/Lib.code -o %t

/// Check diagnostics.

//--- Lib.code
public struct LibType {}

// RUN: %target-language-frontend -typecheck %t/OneFile_AllExplicit.code -I %t \
// RUN:   -package-name package -verify
//--- OneFile_AllExplicit.code
public import Lib // expected-warning {{public import of 'Lib' was not used in public declarations or inlinable code}}
// expected-note @-1 4 {{imported 'public' here}}
package import Lib // expected-warning {{package import of 'Lib' was not used in package declarations}}
// expected-warning @-1 {{module 'Lib' is imported as 'public' from the same file; this 'package' access level will be ignored}}
internal import Lib
// expected-warning @-1 {{module 'Lib' is imported as 'public' from the same file; this 'internal' access level will be ignored}}
fileprivate import Lib
// expected-warning @-1 {{module 'Lib' is imported as 'public' from the same file; this 'fileprivate' access level will be ignored}}
private import Lib
// expected-warning @-1 {{module 'Lib' is imported as 'public' from the same file; this 'private' access level will be ignored}}

// RUN: %target-language-frontend -typecheck %t/ManyFiles_AllExplicit_File?.code -I %t \
// RUN:   -package-name package -verify
//--- ManyFiles_AllExplicit_FileA.code
public import Lib // expected-warning {{public import of 'Lib' was not used in public declarations or inlinable code}}
//--- ManyFiles_AllExplicit_FileB.code
package import Lib // expected-warning {{package import of 'Lib' was not used in package declarations}}
//--- ManyFiles_AllExplicit_FileC.code
internal import Lib
//--- ManyFiles_AllExplicit_FileD.code
fileprivate import Lib
//--- ManyFiles_AllExplicit_FileE.code
private import Lib

// RUN: %target-language-frontend -typecheck %t/ManyFiles_ImplicitVsInternal_FileB.code -I %t \
// RUN:   -primary-file %t/ManyFiles_ImplicitVsInternal_FileA.code -verify
//--- ManyFiles_ImplicitVsInternal_FileA.code
import Lib // expected-error {{ambiguous implicit access level for import of 'Lib'; it is imported as 'internal' elsewhere}}
// expected-note @-1 {{silence these warnings by adopting the upcoming feature 'InternalImportsByDefault'}}
//--- ManyFiles_ImplicitVsInternal_FileB.code
internal import Lib // expected-note {{imported 'internal' here}}

// RUN: %target-language-frontend -typecheck %t/ManyFiles_ImplicitVsPackage_FileB.code -I %t \
// RUN:   -primary-file %t/ManyFiles_ImplicitVsPackage_FileA.code -verify
//--- ManyFiles_ImplicitVsPackage_FileA.code
import Lib // expected-error {{ambiguous implicit access level for import of 'Lib'; it is imported as 'package' elsewhere}}
// expected-note @-1 {{silence these warnings by adopting the upcoming feature 'InternalImportsByDefault'}}
//--- ManyFiles_ImplicitVsPackage_FileB.code
package import Lib // expected-note {{imported 'package' here}} @:1

// RUN: %target-language-frontend -typecheck %t/ManyFiles_AmbiguityCodira6_File?.code -I %t \
// RUN:   -enable-upcoming-feature InternalImportsByDefault -verify
//--- ManyFiles_AmbiguityCodira6_FileA.code
import Lib
//--- ManyFiles_AmbiguityCodira6_FileB.code
internal import Lib

/// Don't report an ambiguity between an explicitly vs implicitly public import.
// RUN: %target-language-frontend -typecheck %t/ManyFiles_AmbiguityPublicExplicitVsImplicit_File?.code -I %t \
// RUN:  -verify
//--- ManyFiles_AmbiguityPublicExplicitVsImplicit_FileA.code
import Lib
//--- ManyFiles_AmbiguityPublicExplicitVsImplicit_FileB.code
public import Lib // expected-warning {{public import of 'Lib' was not used in public declarations or inlinable code}}

/// Don't report inconsistencies from a file generated by Xcode.
// RUN: %target-language-frontend -typecheck -I %t \
// RUN:    -primary-file %t/GeneratedAssetSymbols.code \
// RUN:   %t/UserWrittenFile.code -verify
// RUN: %target-language-frontend -typecheck -I %t \
// RUN:    %t/GeneratedAssetSymbols.code \
// RUN:   -primary-file %t/UserWrittenFile.code -verify

// REQUIRES: language_feature_InternalImportsByDefault
//--- UserWrittenFile.code
internal import Lib
//--- GeneratedAssetSymbols.code
import Lib

